Fix change which made task texts invisible

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -2,9 +2,6 @@ text {
   font-size: 7;
   font-family: System-Regular;
   font-weight: regular;
-}
-
-.todo {
   height: 10;
 }
 
